--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -42,6 +42,8 @@
         android:drawablePadding="5sp"
         android:fontFamily="@font/lato"
         android:textSize="14sp"
+        android:padding="11sp"
+        android:background="@drawable/custom_input"
         android:hint="@string/email_hint"
         android:layout_marginHorizontal="45sp"
         />
@@ -63,7 +65,9 @@
         android:drawableStart="@drawable/ic_lock"
         android:drawablePadding="5sp"
         android:fontFamily="@font/lato"
+        android:background="@drawable/custom_input"
         android:textSize="14sp"
+        android:padding="11sp"
         android:hint="@string/password_hint"
         android:layout_marginHorizontal="45sp"
         />
@@ -84,7 +88,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/lato_bold"
-        android:padding="12sp"
+        android:padding="13sp"
         android:layout_marginHorizontal="45sp"
         android:text="@string/login"
         />
