fix the edit text style

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -42,7 +42,7 @@
         android:drawablePadding="5sp"
         android:fontFamily="@font/lato"
         android:textSize="14sp"
-        android:padding="11sp"
+        android:padding="12sp"
         android:background="@drawable/custom_input"
         android:hint="@string/email_hint"
         android:layout_marginHorizontal="45sp"
@@ -67,7 +67,7 @@
         android:fontFamily="@font/lato"
         android:background="@drawable/custom_input"
         android:textSize="14sp"
-        android:padding="11sp"
+        android:padding="12sp"
         android:hint="@string/password_hint"
         android:layout_marginHorizontal="45sp"
         />
@@ -88,7 +88,8 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
         android:fontFamily="@font/lato_bold"
-        android:padding="13sp"
+        android:background="@drawable/custom_input"
+        android:padding="10sp"
         android:layout_marginHorizontal="45sp"
         android:text="@string/login"
         />
