--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -94,15 +94,34 @@
         android:text="@string/login"
         />
 
-    <TextView
-        android:id="@+id/text_to_signup"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_marginTop="20dp"
-        android:fontFamily="@font/lato"
-        android:textColor="@color/black"
-        android:text="@string/login_statement" />
+        android:gravity="center_horizontal"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/lato"
+            android:textColor="@color/black"
+            android:text="@string/login_statement" />
+
+        <TextView
+            android:id="@+id/text_to_signup"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/lato"
+            android:textColor="@color/green_400"
+            android:textStyle="bold"
+            android:paddingStart="5sp"
+            android:text="@string/daftar"
+            />
+    </LinearLayout>
 
     <TextView
         android:layout_height="match_parent"
