--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -3,14 +3,151 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".ui.auth.LoginFragment">
 
-    <!-- TODO: Update blank fragment layout -->
+    <ImageView
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:src="@drawable/sign_up"/>
+
     <TextView
-        android:id="@+id/text_to_login"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:fontFamily="@font/lato_bold"
+        android:layout_marginTop="25sp"
+        android:text="@string/login"
         android:textAlignment="center"
-        android:text="@string/signup_statement" />
+        android:textColor="@color/black"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="45sp"
+        android:fontFamily="@font/lato"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:text="@string/nama"/>
+
+    <EditText
+        android:id="@+id/input_name_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_person"
+        android:drawablePadding="5sp"
+        android:fontFamily="@font/lato"
+        android:textSize="14sp"
+        android:padding="12sp"
+        android:background="@drawable/custom_input"
+        android:hint="@string/name_hint"
+        android:layout_marginHorizontal="45sp"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="45sp"
+        android:fontFamily="@font/lato"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:text="@string/email"/>
+
+    <EditText
+        android:id="@+id/input_email_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_email"
+        android:drawablePadding="5sp"
+        android:fontFamily="@font/lato"
+        android:textSize="14sp"
+        android:padding="12sp"
+        android:background="@drawable/custom_input"
+        android:hint="@string/email_hint"
+        android:layout_marginHorizontal="45sp"
+        />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:layout_marginHorizontal="45sp"
+        android:fontFamily="@font/lato"
+        android:textColor="@color/black"
+        android:textSize="12sp"
+        android:text="@string/password"/>
+
+    <EditText
+        android:id="@+id/input_email_password"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:drawableStart="@drawable/ic_lock"
+        android:drawablePadding="5sp"
+        android:fontFamily="@font/lato"
+        android:background="@drawable/custom_input"
+        android:textSize="14sp"
+        android:padding="12sp"
+        android:hint="@string/password_hint"
+        android:layout_marginHorizontal="45sp"
+        />
+
+
+    <Button
+        android:id="@+id/btn_login"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:fontFamily="@font/lato_bold"
+        android:background="@drawable/custom_input"
+        android:padding="10sp"
+        android:layout_marginHorizontal="45sp"
+        android:text="@string/signup"
+        />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:orientation="horizontal" >
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/lato"
+            android:textColor="@color/black"
+            android:text="@string/signup_statement" />
+
+        <TextView
+            android:id="@+id/text_to_login"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textAlignment="center"
+            android:layout_marginTop="20dp"
+            android:fontFamily="@font/lato"
+            android:textColor="@color/green_400"
+            android:textStyle="bold"
+            android:paddingStart="5sp"
+            android:text="@string/masuk"
+            />
+    </LinearLayout>
+
+    <TextView
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        android:textAlignment="center"
+        android:paddingBottom="10sp"
+        android:gravity="center|bottom"
+        android:text="@string/copyright"
+        android:fontFamily="@font/lato"
+        android:textColor="@color/black"
+        />
+
 
 </LinearLayout>
