--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -18,7 +18,7 @@
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato_bold"
         android:layout_marginTop="25sp"
-        android:text="@string/login"
+        android:text="@string/signup"
         android:textAlignment="center"
         android:textColor="@color/black"
         android:textSize="25sp"
