--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -17,7 +17,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="@font/lato_bold"
-        android:layout_marginTop="25sp"
+        android:layout_marginTop="25dp"
         android:text="@string/login"
         android:textAlignment="center"
         android:textColor="@color/black"
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="45sp"
+        android:layout_marginHorizontal="45dp"
         android:fontFamily="@font/lato"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -39,20 +39,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_email"
-        android:drawablePadding="5sp"
+        android:drawablePadding="5dp"
         android:fontFamily="@font/lato"
         android:textSize="14sp"
-        android:padding="12sp"
+        android:padding="12dp"
         android:background="@drawable/custom_input"
         android:hint="@string/email_hint"
-        android:layout_marginHorizontal="45sp"
+        android:layout_marginHorizontal="45dp"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
-        android:layout_marginHorizontal="45sp"
+        android:layout_marginHorizontal="45dp"
         android:fontFamily="@font/lato"
         android:textColor="@color/black"
         android:textSize="12sp"
@@ -63,20 +63,20 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_lock"
-        android:drawablePadding="5sp"
+        android:drawablePadding="5dp"
         android:fontFamily="@font/lato"
         android:background="@drawable/custom_input"
         android:textSize="14sp"
-        android:padding="12sp"
+        android:padding="12dp"
         android:hint="@string/password_hint"
-        android:layout_marginHorizontal="45sp"
+        android:layout_marginHorizontal="45dp"
         />
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAlignment="textEnd"
-        android:layout_marginHorizontal="45sp"
+        android:layout_marginHorizontal="45dp"
         android:textColor="@color/black"
         android:fontFamily="@font/lato"
         android:textSize="12sp"
@@ -89,8 +89,8 @@
         android:layout_marginTop="20dp"
         android:fontFamily="@font/lato_bold"
         android:background="@drawable/custom_input"
-        android:padding="10sp"
-        android:layout_marginHorizontal="45sp"
+        android:padding="10dp"
+        android:layout_marginHorizontal="45dp"
         android:text="@string/login"
         />
 
@@ -118,7 +118,7 @@
             android:fontFamily="@font/lato"
             android:textColor="@color/green_400"
             android:textStyle="bold"
-            android:paddingStart="5sp"
+            android:paddingStart="5dp"
             android:text="@string/daftar"
             />
     </LinearLayout>
@@ -127,7 +127,7 @@
         android:layout_height="match_parent"
         android:layout_width="match_parent"
         android:textAlignment="center"
-        android:paddingBottom="10sp"
+        android:paddingBottom="10dp"
         android:gravity="center|bottom"
         android:text="@string/copyright"
         android:fontFamily="@font/lato"
