--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -35,7 +35,7 @@
         android:text="@string/nama"/>
 
     <EditText
-        android:id="@+id/input_name_login"
+        android:id="@+id/input_name_signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_person"
@@ -59,7 +59,7 @@
         android:text="@string/email"/>
 
     <EditText
-        android:id="@+id/input_email_login"
+        android:id="@+id/input_email_signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_email"
@@ -83,7 +83,7 @@
         android:text="@string/password"/>
 
     <EditText
-        android:id="@+id/input_email_password"
+        android:id="@+id/input_password_signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:drawableStart="@drawable/ic_lock"
@@ -91,6 +91,7 @@
         android:fontFamily="@font/lato"
         android:background="@drawable/custom_input"
         android:textSize="14sp"
+        android:inputType="textPassword"
         android:padding="12sp"
         android:hint="@string/password_hint"
         android:layout_marginHorizontal="45sp"
@@ -98,7 +99,7 @@
 
 
     <Button
-        android:id="@+id/btn_login"
+        android:id="@+id/btn_signup"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="20dp"
