develop logout, profile,
make logout fiture, ngakalin xml profile, change dashboard to chat consule, clear dark teme.

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -12,7 +12,7 @@
         tools:layout="@layout/fragment_home" />
 
     <fragment
-        android:id="@+id/navigation_dashboard"
+        android:id="@+id/navigation_konsul"
         android:name="com.example.sawithub.ui.riwayatKonsul.RiwayatKonsulFragment"
         android:label="@string/title_dashboard"
         tools:layout="@layout/fragment_dashboard" />
