--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Sawithub" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Sawithub" parent="Theme.MaterialComponents.Light.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/green_400</item>
         <item name="colorPrimaryVariant">@color/green_400</item>
@@ -12,5 +12,8 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
+        <item name="shapeAppearanceCircleImageView">
+            @style/ShapeAppearance.sawithub.CircleImageView
+        </item>
     </style>
 </resources>
