--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -23,7 +23,7 @@
         android:id="@+id/tv_tambahkan_foto"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/tambahkan_profil"
+        android:text="@string/edit_foto"
         android:textColor="@color/green_400"
         android:gravity="center"
         android:layout_marginTop="10dp"
